--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,15 +2,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout 
+        android:id="@+id/linearWeatherBg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#736284"
+        >
+        
+    </FrameLayout>
+    
+    <LinearLayout
+        android:id="@+id/linear1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="horizontal"
+        android:gravity="center" 
+		android:layout_above="@+id/linear2">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下雨" 
+            android:onClick="doRain"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下雪" 
+            android:onClick="doSnow"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="阴天" 
+            android:onClick="doOvercast"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="晴天" 
+            android:onClick="doSunny"
+            android:layout_marginRight="5dip"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" 
+        android:layout_alignParentBottom="true">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="多云" 
+            android:onClick="doCloudy"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="雾霾" 
+            android:onClick="doFog"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="大风" 
+            android:onClick="doWind"
+            android:layout_marginRight="5dip"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="xx" 
+            android:layout_marginRight="5dip"/>
+    </LinearLayout>
+    
+    
 
 </RelativeLayout>
